--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a class="navbar-btn" href="">Mc</a>
             <a class="navbar-btn" href="">Misc</a>
         </div>
-        <div style="flex-grow: 1"><input type="search"></div>
+        <div style="flex-grow: 1;"><input placeholder="Search for..." type="search"></div>
     </div>
     <!---->
 </body>
