--- a/index.html
+++ b/index.html
@@ -12,16 +12,24 @@
 <body>
     <!--Navbar--> 
     <div class="flex-container-nav">
-        <div style="flex-grow: 1;"><a class="Logo" href="ball.html" target="_blank">Gregs<span
-                    style="color: gold;">list</span></a></div>
-        <div style="flex-grow: 24">
-            <a class="navbar-btn" href="">Bil</a>
-            <a class="navbar-btn" href="">Mc</a>
-            <a class="navbar-btn" href="">Misc</a>
-        </div>
-        <div style="flex-grow: 1;"><input placeholder="Search for..." type="search"></div>
+        <div style="flex-grow: 1;"></div>
+        <div style="flex-grow: 1;"><a class="Logo" href="">Gregs<span
+            style="color: gold;">list</span></a></div>
+        <div style="flex-grow: 1;"></div>
     </div>
     <!---->
+
+    <!--Grid-->
+    <div class="homepage-grid">
+<div class="homepage-main">
+<a href="Bilar.html" class="homepage-card" id="homepage-card-bil"></a>
+<a href="Mc.html" class="homepage-card" id="homepage-card-mc"></a>
+<a href="Misc.html" class="homepage-card" id="homepage-card-misc"></a>
+   <!-- <div class="" style="grid-column-start: 1;"></div>
+    <div class="" style="grid-column-start: 2;"></div>
+    <div class="" style="grid-column-start: 3;"></div>-->
+</div>
+    </div>
 </body>
 
 </html>
